# miditoolkit

./: .gitignore  .gitignore   .pre-commit-config.yaml  LICENSE  README.md  load_sheetsage.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  test.py
.github/: codecov.yml  release-drafter-config.yml
.github/workflows/: main.yml  publish.yml  pytest.yml  release-drafter.yml  release.yml
examples/: parse_and_create_MIDI_files.ipynb  pinoroll_manipulation.ipynb
miditoolkit/: __init__.py  constants.py  test_three.py
miditoolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
miditoolkit/midi/: __init__.py  containers.py  parser.py  utils.py
miditoolkit/midi/examples/: 1390.mid
miditoolkit/pianoroll/: __init__.py  parser.py  utils.py  vis.py
testcases/: 1.midi  2.midi  4.midi
testfiles/: test_bytes_io.py  test_read_dump.py
tests/: .gitignore  conftest.py  test_pianoroll.py  test_read_dump.py  test_utils.py  utils.py
tests/testcases/: 3.midi
