[tool.poetry]
name = "miditoolkit"
version = "0.1.0"
description = "A python package for working with MIDI data files. (POZAlabs forked)"
authors = ["pozalabs <contact@pozalabs.com>"]
license = "MIT"
readme = "README.md"
keywords = [
    "midi",
    "mir",
    "music",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

[tool.poetry.dependencies]
python = "^3.9"
mido = "^1.1.16"
numpy = "^1.19"
matplotlib = "^3.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
